--- a/aula-01/java/pom.xml
+++ b/aula-01/java/pom.xml
@@ -57,12 +57,12 @@
     </parent>
 
     <properties>
-        <java.version>8</java.version>
+        <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.mainClass>
-            com.github.kyriosdata.exemplo.application.console.ProgramaCalendario
+            com.github.danielfreitasbs.GeneralAlgorithms
         </project.mainClass>
 
         <tools.dir>${project.basedir}/tools</tools.dir>
@@ -266,9 +266,6 @@
                 <version>3.1.0</version>
                 <configuration>
                     <show>public</show>
-                    <additionalOptions>
-                        <additionalOption>-html5</additionalOption>
-                    </additionalOptions>
                 </configuration>
             </plugin>
 
@@ -874,9 +871,6 @@
                         <version>3.0.1</version>
                         <configuration>
                             <show>public</show>
-                            <additionalOptions>
-                                <additionalOption>-html5</additionalOption>
-                            </additionalOptions>
                         </configuration>
                         <executions>
                             <execution>
