--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: java
 
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.organization="kyriosdata-github" -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+  - cd aula-01/java && mvn test
 cache:
   directories:
   - "$HOME/.m2/repository"
