--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: java
 
 script:
-  - cd aula-01/java && mvn test
+  - cd aula-01/java && mvn test checkstyle:check pmd:check spotbugs:check
 cache:
   directories:
   - "$HOME/.m2/repository"
