--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: java
 
 script:
-  - cd aula-01/java && mvn test checkstyle:checkstyle pmd:pmd
+  - cd aula-01/java && mvn test checkstyle:check spotbugs:check verify -P cobertura
 cache:
   directories:
   - "$HOME/.m2/repository"
