Implementação parcial de correçoes da aula 08.

--- a/aula-07/vetor/java/pom.xml
+++ b/aula-07/vetor/java/pom.xml
@@ -62,7 +62,7 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.mainClass>
-			com.github.danielfreitasbs.domain.ManipularVetores
+			com.github.danielfreitasbs.domain.VetorUtils
 		</project.mainClass>
 
 		<tools.dir>${project.basedir}/tools</tools.dir>
