--- a/aula-08/encontre/pom.xml
+++ b/aula-08/encontre/pom.xml
@@ -237,24 +237,24 @@
 			</plugin>
 
 			<!-- surefire -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <!--<dependencies>-->
-                <!--<dependency>-->
-                <!--<groupId>org.junit.platform</groupId>-->
-                <!--<artifactId>junit-platform-surefire-provider-->
-                <!--</artifactId>-->
-                <!--<version>1.2.0</version>-->
-                <!--</dependency>-->
-                <!--<dependency>-->
-                <!--<groupId>com.tngtech.archunit</groupId>-->
-                <!--<artifactId>archunit-junit5-engine</artifactId>-->
-                <!--<version>0.9.1</version>-->
-                <!--</dependency>-->
-                <!--</dependencies>-->
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<!--<dependencies> -->
+				<!--<dependency> -->
+				<!--<groupId>org.junit.platform</groupId> -->
+				<!--<artifactId>junit-platform-surefire-provider -->
+				<!--</artifactId> -->
+				<!--<version>1.2.0</version> -->
+				<!--</dependency> -->
+				<!--<dependency> -->
+				<!--<groupId>com.tngtech.archunit</groupId> -->
+				<!--<artifactId>archunit-junit5-engine</artifactId> -->
+				<!--<version>0.9.1</version> -->
+				<!--</dependency> -->
+				<!--</dependencies> -->
+			</plugin>
 
 			<!-- javadoc:javadoc -->
 			<!-- target/site/apidocs/index.html -->
@@ -785,6 +785,9 @@
 									<goal>check</goal>
 								</goals>
 								<configuration>
+									<excludes>
+										<exclude>**/Programa*.*</exclude>
+									</excludes>
 									<rules>
 										<rule implementation="org.jacoco.maven.RuleConfiguration">
 											<element>BUNDLE</element>
