--- a/aula-08/inteiro/pom.xml
+++ b/aula-08/inteiro/pom.xml
@@ -1,60 +1,61 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.com.danielfreitasbs</groupId>
-  <artifactId>inteiro</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <description>Projeto referente ao sexto exercício das atividades propostas em aula-08, pela disciplina de construção de software - UFG</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.github.com.danielfreitasbs</groupId>
+	<artifactId>inteiro</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<description>Projeto referente ao sexto exercício das atividades propostas em aula-08, pela disciplina de construção de software - UFG</description>
 
-    <url>https://github.com/danielfreitasbs/cs-2019-01</url>
+	<url>https://github.com/danielfreitasbs/cs-2019-01</url>
 
-    <inceptionYear>2019</inceptionYear>
+	<inceptionYear>2019</inceptionYear>
 
-    <licenses>
-        <license>
-            <name>Creative Commons Attribution 4.0 International (CC BY 4.0)
+	<licenses>
+		<license>
+			<name>Creative Commons Attribution 4.0 International (CC BY 4.0)
             </name>
-            <comments>A atribuição deve conter, explicitamente, a seguinte
+			<comments>A atribuição deve conter, explicitamente, a seguinte
                 linha:
                 Copyright (c) 2019. Daniel Freitas - Engenharia de Software - UFG
             </comments>
-            <url>https://creativecommons.org/licenses/by/4.0/</url>
-        </license>
-    </licenses>
+			<url>https://creativecommons.org/licenses/by/4.0/</url>
+		</license>
+	</licenses>
 
-    <developers>
-        <developer>
-            <id>danielfreitasbs</id>
-            <name>Daniel Italo Freitas de Jesus</name>
-            <email>daniel.italofreitas@gmail.com</email>
-            <organization>Particular</organization>
-            <organizationUrl>http://www.github.com/danielfreitasbs/cs-2019-01</organizationUrl>
-        </developer>
-    </developers>
+	<developers>
+		<developer>
+			<id>danielfreitasbs</id>
+			<name>Daniel Italo Freitas de Jesus</name>
+			<email>daniel.italofreitas@gmail.com</email>
+			<organization>Particular</organization>
+			<organizationUrl>http://www.github.com/danielfreitasbs/cs-2019-01</organizationUrl>
+		</developer>
+	</developers>
 
-    <scm>
-        <connection>scm:git:https://github.com/danielfreitasbs/cs-2019-01.git
+	<scm>
+		<connection>scm:git:https://github.com/danielfreitasbs/cs-2019-01.git
         </connection>
-        <developerConnection>scm:git:https://github.com/danielfreitasbs/cs-2019-01.git
+		<developerConnection>scm:git:https://github.com/danielfreitasbs/cs-2019-01.git
         </developerConnection>
-        <url>https://github.com/danielfreitasbs/cs-2019-01</url>
-    </scm>
+		<url>https://github.com/danielfreitasbs/cs-2019-01</url>
+	</scm>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
-    </parent>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.5.RELEASE</version>
+	</parent>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.mainClass>
-            com.github.danielfreitasbs.domain.application.Console
-        </project.mainClass>
+	<properties>
+		<java.version>1.8</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.mainClass>
+			com.github.danielfreitasbs.domain.application.Console
+		</project.mainClass>
 
-        <tools.dir>${project.basedir}/tools</tools.dir>
+		<tools.dir>${project.basedir}/tools</tools.dir>
 		<pmd.plugin>3.12.0</pmd.plugin>
 		<pmd.version>6.15.0</pmd.version>
 		<checkstyle.plugin>3.1.0</checkstyle.plugin>
@@ -783,6 +784,9 @@
 									<goal>check</goal>
 								</goals>
 								<configuration>
+									<excludes>
+										<exclude>**/Console*.*</exclude>
+									</excludes>
 									<rules>
 										<rule implementation="org.jacoco.maven.RuleConfiguration">
 											<element>BUNDLE</element>
