--- a/aula-09/pom.xml
+++ b/aula-09/pom.xml
@@ -105,6 +105,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<distributionManagement>
@@ -246,24 +253,24 @@
 			</plugin>
 
 			<!-- surefire -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <!--<dependencies>-->
-                <!--<dependency>-->
-                <!--<groupId>org.junit.platform</groupId>-->
-                <!--<artifactId>junit-platform-surefire-provider-->
-                <!--</artifactId>-->
-                <!--<version>1.2.0</version>-->
-                <!--</dependency>-->
-                <!--<dependency>-->
-                <!--<groupId>com.tngtech.archunit</groupId>-->
-                <!--<artifactId>archunit-junit5-engine</artifactId>-->
-                <!--<version>0.9.1</version>-->
-                <!--</dependency>-->
-                <!--</dependencies>-->
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<!--<dependencies> -->
+				<!--<dependency> -->
+				<!--<groupId>org.junit.platform</groupId> -->
+				<!--<artifactId>junit-platform-surefire-provider -->
+				<!--</artifactId> -->
+				<!--<version>1.2.0</version> -->
+				<!--</dependency> -->
+				<!--<dependency> -->
+				<!--<groupId>com.tngtech.archunit</groupId> -->
+				<!--<artifactId>archunit-junit5-engine</artifactId> -->
+				<!--<version>0.9.1</version> -->
+				<!--</dependency> -->
+				<!--</dependencies> -->
+			</plugin>
 
 			<!-- javadoc:javadoc -->
 			<!-- target/site/apidocs/index.html -->
