Refatoração baseada em analises de checkstyle e pmd.
Signed-off-by: Daniel Freitas <danielgtavicy@gmail.com>

--- a/aula-09/pom.xml
+++ b/aula-09/pom.xml
@@ -281,7 +281,7 @@
 				<configuration>
 					<show>public</show>
 					<additionalOptions>
-
+						<additionalOption>-html5</additionalOption>
 					</additionalOptions>
 				</configuration>
 			</plugin>
@@ -892,7 +892,7 @@
 						<configuration>
 							<show>public</show>
 							<additionalOptions>
-
+								<additionalOption>-html5</additionalOption>
 							</additionalOptions>
 						</configuration>
 						<executions>
